fixing table spacing in home

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,6 +65,6 @@ div.food-image-div {
 .message-footer {
 	padding-bottom: 5px;
 }
-table {
+#settings-table {
 	margin-top: 25px;
 }
